# django-coding-test

./: README.md  package.json  pnpm-lock.yaml
src/: django_test  manage.py  pyproject.toml
src/config/: g_model.py  settings.py  wsgi.py
src/product/: admin.py  models.py  urls.py
src/product/migrations/: 0002_remove_variant_active_alter_variant_created_at_and_more.py  0003_alter_product_created_at_alter_product_description_and_more.py  0004_productimage_thumbnail_alter_productimage_created_at_and_more.py  0005_alter_productvariantprice_product.py  0006_alter_productvariantprice_product.py  0007_alter_productvariantprice_product.py
src/product/templates/products/: list.html
src/product/templatetags/: page.py
src/product/views/: product.py  variant.py
src/templates/assets/js/components/: CreateProduct.js
